# nothing-engine

./: BANKED_CASIMIR_DIRECTIONS.md  CHANGELOG.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  whitepaper_geometry_of_nothing.md
analysis/: psd_analysis.py  residual_motion.py  ringdown_fit.py
cli/: __init__.py
config/: __init__.py  default_params.yaml  loader.py  validation_criteria.yaml
core/: __init__.py  bogoliubov.py  constants.py  energy.py  energy_audit.py  flux.py  mode_space.py  plate.py  radiation_pressure.py
experiments/: _atomic_h5.py  analyze_convergence.py  plot_phyllotaxis_graph.py  plot_phyllotaxis_shells.py  run_analysis.py  run_closed_ringdown.py  run_convergence.py  run_open_ringdown.py  run_phyllotaxis_graph.py  run_single.py  run_topology_comparison.py  run_topology_v2.py  runner.py  val_adiabatic.py  val_conservation.py  val_dynamic_casimir.py  val_phyllotaxis_consistency.py  val_phyllotaxis_relax.py  val_residual_baseline.py  val_static_casimir.py
gui/: __init__.py  __main__.py  app.py  config_panel.py  main_window.py  plots.py  results_loader.py  run_controller.py  theme.py
nothing_engine/core/: bogoliubov.py  energy.py  energy_audit.py
nothing_engine/experiments/: run_topology_comparison.py  run_topology_v2.py  runner.py  val_adiabatic.py  val_conservation.py  val_dynamic_casimir.py  (+2 more)
tests/: test_bogoliubov.py  test_energy_audit.py  test_gui_smoke.py  test_mode_space.py  test_phyllotaxis_runner_atomic.py  test_radiation_pressure.py  test_run_single.py  test_runner.py  test_runner_callback.py
(+8 files in other folders)
