[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nothing-engine"
version = "0.1.0"
description = "Casimir vacuum friction simulator — Bogoliubov mode-function evolution coupled to dynamical plate motion"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Nothing Engine Contributors" },
]
keywords = ["casimir", "quantum-vacuum", "bogoliubov", "simulation", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24,<2.1",
    "scipy>=1.11,<1.15",
    "h5py>=3.9,<4.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
]
analysis = [
    "matplotlib>=3.7,<4.0",
]

[project.urls]
Repository = "https://github.com/OWNER/nothing-engine"

[tool.setuptools.packages.find]
include = ["nothing_engine*"]

[tool.pytest.ini_options]
testpaths = ["nothing_engine/tests"]
